homework/5.kubernetes-network/my-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: redmine-db
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres-db
  type: ClusterIP
